--- a/public/alerts.html
+++ b/public/alerts.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alerts</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script type="module" src="./js/alerts.js" defer></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col">
+<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
 
-  <header class="bg-white shadow flex items-center px-4 py-3">
-    <button onclick="window.history.back()" class="text-gray-700">
-      <i class="fa-solid fa-chevron-left text-lg"></i>
-    </button>
-    <h1 class="flex-1 text-center font-semibold text-lg">Alerts</h1>
-    <div class="w-6"></div>
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <div class="max-w-6xl mx-auto px-4 py-6 flex items-center">
+      <button onclick="window.history.back()" class="text-gray-700 p-2 rounded hover:bg-gray-100 transition">
+        <i class="fa-solid fa-chevron-left text-lg"></i>
+      </button>
+      <h1 class="flex-1 text-center text-xl font-bold text-blue-900 tracking-wide">Alerts</h1>
+      <div class="w-8"></div>
+    </div>
   </header>
 
-  <main class="flex-1 p-4 space-y-4">
-    <section id="alerts-container" class="space-y-3">
-      <p class="text-gray-500">Loading alerts...</p>
-    </section>
+  <main class="flex-1 container mx-auto p-4 space-y-8 overflow-y-auto">
+
+    <div id="alerts-view-section" class="space-y-4">
+      <h2 class="text-lg font-semibold text-blue-900">Received Alerts</h2>
+      <section id="alerts-container" class="space-y-3">
+        <p class="text-gray-500 text-center">Loading alerts...</p>
+      </section>
+    </div>
+
+    <div id="send-alert-section" class="space-y-4 bg-white p-6 shadow rounded-xl border border-gray-200">
+      <h2 class="text-lg font-semibold text-blue-900">Send Alert</h2>
+      <form id="send-alert-form" class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Select Users</label>
+          <select id="users-select" multiple class="w-full border rounded p-2 text-sm"></select>
+        </div>
+
+        <div>
+          <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+          <textarea id="alert-message" class="w-full border rounded p-2 text-sm" rows="4" placeholder="Write your alert message here..."></textarea>
+        </div>
+
+        <div class="flex justify-end gap-2">
+          <button type="submit" id="send-alert-btn" class="px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-800 transition">Send Alert</button>
+        </div>
+      </form>
+    </div>
+
   </main>
 
-  <button id="back-to-top" class="fixed bottom-6 right-6 p-3 bg-gray-700 text-white rounded-full shadow-lg hidden">
+  <div class="fixed bottom-6 left-1/2 transform -translate-x-1/2 flex gap-4">
+    <button id="view-alerts-btn" class="px-4 py-2 bg-gray-700 text-white rounded-full shadow-lg hover:bg-gray-600 transition">View Alerts</button>
+  </div>
+
+  <button id="back-to-top" class="fixed bottom-6 right-6 p-3 bg-blue-900 text-white rounded-full shadow-lg hover:bg-blue-800 transition hidden">
     <i class="fa-solid fa-arrow-up"></i>
   </button>
 
