--- a/public/alerts.html
+++ b/public/alerts.html
@@ -1,62 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alerts</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script type="module" src="./js/alerts.js" defer></script>
-</head>
-<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alerts</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script type="module" src="./js/alerts.js" defer></script>
+  </head>
+  <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-sans">
+    <header class="bg-white shadow sticky top-0 z-50">
+      <div
+        class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between"
+      >
+        <button
+          onclick="window.history.back()"
+          class="text-gray-700 p-2 rounded-lg hover:bg-gray-100 transition"
+        >
+          <i class="fa-solid fa-chevron-left text-lg"></i>
+        </button>
+        <h1 class="text-xl font-bold text-blue-900 tracking-wide">Alerts</h1>
+        <div class="w-8"></div>
+      </div>
+    </header>
 
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto px-4 py-6 flex items-center">
-      <button onclick="window.history.back()" class="text-gray-700 p-2 rounded hover:bg-gray-100 transition">
-        <i class="fa-solid fa-chevron-left text-lg"></i>
-      </button>
-      <h1 class="flex-1 text-center text-xl font-bold text-blue-900 tracking-wide">Alerts</h1>
-      <div class="w-8"></div>
-    </div>
-  </header>
-
-  <main class="flex-1 container mx-auto p-4 space-y-8 overflow-y-auto">
-
-    <div id="alerts-view-section" class="space-y-4">
-      <h2 class="text-lg font-semibold text-blue-900">Received Alerts</h2>
-      <section id="alerts-container" class="space-y-3">
-        <p class="text-gray-500 text-center">Loading alerts...</p>
+    <main class="flex-1 container mx-auto p-4 space-y-6">
+      <section id="alerts-view-section" class="space-y-4">
+        <h2 class="text-lg font-semibold text-blue-900 flex items-center gap-2">
+          <i class="fa-solid fa-inbox"></i> Received Alerts
+        </h2>
+        <div id="alerts-container" class="space-y-4">
+          <p class="text-gray-500 text-center">Loading alerts...</p>
+        </div>
       </section>
+    </main>
+
+    <button
+      id="open-send-alert"
+      class="fixed bottom-6 right-6 md:right-14 p-4 bg-blue-900 text-white rounded-full shadow-lg hover:bg-blue-800 transition z-50 flex items-center gap-2 hidden"
+    >
+      <i class="fa-solid fa-paper-plane"></i> Send Alert
+    </button>
+
+    <div
+      id="send-alert-modal"
+      class="fixed inset-0 bg-black bg-opacity-40 hidden z-50 flex justify-center items-center p-4"
+    >
+      <div class="bg-white w-full max-w-md rounded-xl shadow-lg p-6 relative">
+        <button
+          id="close-send-alert"
+          class="absolute top-4 right-4 text-gray-500 hover:text-gray-700"
+        >
+          <i class="fa-solid fa-xmark text-xl"></i>
+        </button>
+
+        <h2
+          class="text-lg font-semibold text-blue-900 flex items-center gap-2 mb-4"
+        >
+          <i class="fa-solid fa-paper-plane"></i> Send Alert
+        </h2>
+
+        <div id="current-user-info" class="mb-4 text-sm text-gray-700">
+          <p><strong>Name:</strong> <span id="cu-name"></span></p>
+          <p><strong>Role:</strong> <span id="cu-role"></span></p>
+          <p><strong>Position:</strong> <span id="cu-position"></span></p>
+          <p><strong>Department:</strong> <span id="cu-department"></span></p>
+        </div>
+
+        <form id="send-alert-form" class="space-y-4">
+          <div>
+            <label class="block text-sm font-medium text-gray-700 mb-1"
+              >Select Users</label
+            >
+            <div
+              id="users-select"
+              class="max-h-48 overflow-y-auto border rounded-lg p-2 text-sm flex flex-col gap-1"
+            ></div>
+          </div>
+
+          <div class="flex items-center gap-2">
+            <input
+              type="checkbox"
+              id="send-to-department"
+              class="h-4 w-4 text-blue-600 border-gray-300 rounded"
+            />
+            <label for="send-to-department" class="text-sm text-gray-700"
+              >Send to all employees in my department</label
+            >
+          </div>
+
+          <div>
+            <label class="block text-sm font-medium text-gray-700 mb-1"
+              >Message</label
+            >
+            <textarea
+              id="alert-message"
+              rows="4"
+              class="w-full border rounded-lg p-3 text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+              placeholder="Write your alert message here..."
+            ></textarea>
+          </div>
+
+          <div class="flex justify-end">
+            <button
+              type="submit"
+              id="send-alert-btn"
+              class="px-6 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-800 transition flex items-center gap-2 shadow"
+            >
+              <i class="fa-solid fa-paper-plane"></i> Send
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
 
-    <div id="send-alert-section" class="space-y-4 bg-white p-6 shadow rounded-xl border border-gray-200">
-      <h2 class="text-lg font-semibold text-blue-900">Send Alert</h2>
-      <form id="send-alert-form" class="space-y-4">
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1">Select Users</label>
-          <select id="users-select" multiple class="w-full border rounded p-2 text-sm"></select>
+    <template id="alert-card-template">
+      <div
+        class="alert-card bg-white border border-gray-200 shadow rounded-xl p-4 space-y-2"
+      >
+        <div class="flex items-center justify-between">
+          <h3 class="font-semibold text-gray-800 flex items-center gap-2">
+            <i class="fa-solid fa-user-circle text-blue-600"></i>
+            <span class="sender-name">Sender Name</span>
+          </h3>
+          <span class="text-xs text-gray-500 alert-date">2025-10-01</span>
         </div>
-
-        <div>
-          <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
-          <textarea id="alert-message" class="w-full border rounded p-2 text-sm" rows="4" placeholder="Write your alert message here..."></textarea>
+        <p class="text-sm text-gray-700 alert-message">
+          This is an alert message.
+        </p>
+        <div class="flex gap-2 text-xs flex-wrap">
+          <span
+            class="px-2 py-1 bg-blue-100 text-blue-800 rounded-full sender-role"
+            >Manager</span
+          >
+          <span
+            class="px-2 py-1 bg-green-100 text-green-800 rounded-full department"
+            >IT</span
+          >
+          <span class="px-2 py-1 bg-gray-100 text-gray-700 rounded-full sent-to"
+            >Sent to: User1, User2</span
+          >
         </div>
-
-        <div class="flex justify-end gap-2">
-          <button type="submit" id="send-alert-btn" class="px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-800 transition">Send Alert</button>
-        </div>
-      </form>
-    </div>
-
-  </main>
-
-  <div class="fixed bottom-6 left-1/2 transform -translate-x-1/2 flex gap-4">
-    <button id="view-alerts-btn" class="px-4 py-2 bg-gray-700 text-white rounded-full shadow-lg hover:bg-gray-600 transition">View Alerts</button>
-  </div>
-
-  <button id="back-to-top" class="fixed bottom-6 right-6 p-3 bg-blue-900 text-white rounded-full shadow-lg hover:bg-blue-800 transition hidden">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-
-</body>
+      </div>
+    </template>
+  </body>
 </html>
