--- a/public/personal-data.html
+++ b/public/personal-data.html
@@ -71,12 +71,16 @@
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Department</label>
-            <input type="text" id="department" name="department" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <p id="department" class="border rounded-md px-3 py-2 bg-gray-100 text-gray-700">
+            </p>
           </div>
+
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Position</label>
-            <input type="text" id="position" name="position" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <p id="position" class="border rounded-md px-3 py-2 bg-gray-100 text-gray-700">
+            </p>
           </div>
+
         </div>
 
         <div class="flex flex-col sm:flex-row gap-2 mt-4">
