--- a/public/home.html
+++ b/public/home.html
@@ -7,8 +7,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/custom.css" />
-  <script type="module" src="./js/home.js" defer></script>
   <script type="module" src="./js/navigation.js" defer></script>
+  <script type="module" src="./js/home.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans min-h-screen flex flex-col">
 
@@ -18,7 +18,7 @@
 
   <main class="flex-1 container mx-auto p-6 space-y-6">
 
-    <section class="bg-gray-50 border border-gray-300 rounded-sm shadow-sm p-6 hover:shadow-md transition-all duration-200">
+    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
         <i class="fa-solid fa-chart-line text-blue-700"></i>
         <span>Work Summary</span>
@@ -26,23 +26,58 @@
       <p id="work-summary" class="text-gray-700">Loading...</p>
     </section>
 
-    <section class="bg-gray-50 border border-gray-300 rounded-sm shadow-sm p-6 hover:shadow-md transition-all duration-200">
+    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
         <i class="fa-solid fa-calendar-days text-green-700"></i>
         <span>Today's Meetings</span>
       </h2>
-      <div id="meetings-list" class="space-y-2 text-gray-700">Loading...</div>
+      <div id="meetings-list" class="space-y-4 text-gray-700">
+      </div>
     </section>
 
-    <section class="bg-gray-50 border border-gray-300 rounded-sm shadow-sm p-6 hover:shadow-md transition-all duration-200">
+    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
         <i class="fa-solid fa-clipboard-check text-yellow-700"></i>
         <span>Today's Tasks</span>
       </h2>
-      <div id="tasks-list" class="space-y-2 text-gray-700">Loading...</div>
+      <div id="tasks-list" class="space-y-4 text-gray-700">
+      </div>
     </section>
 
   </main>
+
+  <template id="meeting-card-template">
+    <div class="meeting-card border rounded p-4 bg-white shadow-sm hover:shadow-md cursor-pointer transition-all duration-200">
+      <div class="flex justify-between items-start">
+        <div>
+          <h3 class="font-semibold text-gray-800 meeting-title">Meeting Title</h3>
+          <p class="text-sm text-gray-500 meeting-meta">Organizer | Position | Department</p>
+          <p class="text-sm text-gray-500 mt-1 meeting-type"><i class="fa-solid fa-video mr-1"></i> Online / <i class="fa-solid fa-location-dot mr-1"></i> Location</p>
+        </div>
+        <div class="flex -space-x-2 participants-stack mt-1">
+        </div>
+      </div>
+      <ul class="mt-3 hidden meeting-details list-disc list-inside text-sm text-gray-600">
+      </ul>
+    </div>
+  </template>
+
+  <template id="task-card-template">
+    <div class="task-card border rounded p-4 bg-white shadow-sm hover:shadow-md cursor-pointer transition-all duration-200">
+      <div class="flex justify-between items-center">
+        <div>
+          <h3 class="font-semibold text-gray-800 task-title">Task Title</h3>
+          <p class="text-sm text-gray-500 task-meta">Assigned by: Name | Position | Department</p>
+          <p class="text-sm text-gray-500 task-status mt-1"><i class="fa-solid fa-flag mr-1"></i>Status</p>
+        </div>
+        <i class="fa-solid fa-chevron-down task-toggle text-gray-400"></i>
+      </div>
+      <div class="task-details mt-3 hidden text-sm text-gray-600">
+        <p class="task-description">Task description here...</p>
+        <p class="mt-1">Deadline: <span class="task-deadline">YYYY-MM-DD</span></p>
+      </div>
+    </div>
+  </template>
 
 </body>
 </html>
